force-app/main/default/objects/Channel_Mapping__mdt/Channel_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Channel Mapping</label>
    <pluralLabel>Channel Mappings</pluralLabel>
</CustomObject>