force-app/main/default/objects/Channel_Mapping__mdt/fields/Channel_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code_Description__c</fullName>
    <label>Channel Code Description</label>
    <type>TextArea</type>
</CustomField>