force-app/main/default/objects/Channel_Mapping__mdt/fields/Channel_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code_Name__c</fullName>
    <label>Channel Code Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>