force-app/main/default/objects/Channel_Mapping__mdt/fields/Channel_Global_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Channel_Global_Indicator__c</fullName>
    <label>Channel Global Indicator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>