force-app/main/default/objects/Channel_Mapping__mdt/fields/Channel_Group__c.field-meta.xml
<CustomField>
    <fullName>Channel_Group__c</fullName>
    <label>Channel Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>