force-app/main/default/objects/Channel_Mapping__mdt/listViews/Channel_Mapping.listView-meta.xml
<ListView>
    <fullName>Channel_Mapping</fullName>
    <columns>Channel_Code_Name__c</columns>
    <columns>Channel_Code__c</columns>
    <columns>Channel_Group__c</columns>
    <columns>Channel_Global_Indicator__c</columns>
    <columns>Channel_Code_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Channel Mapping</label>
</ListView>